# ML-Repo

./: .gitignore  README.md
services/candle/: Dockerfile  Makefile  config.py  historical.setting.env  live.setting.env  pyproject.toml  run copy.py  run.py  setting.env
services/candle/state/candle_consumer_group_2/tumbling_window_60000_reduce/trade/0/: IDENTITY  LOG  MANIFEST-000005
services/docker-compose/: Makefile  redpanda.yml  technical-indicator-historical.yml  technical-indicator-live copy.yml  technical-indicator-live.yml
services/feature-store/: Dockerfile  Makefile  README.md  config.py  credentials.env  historical.setting.env  live.setting.env  pyproject.toml  run.py  sink.py  technical_indicator.csv
services/news/: Makefile  README.md  config.py  cryptopanic_credential.env  news_datasource.py  news_download.py  pyproject.toml  run.py  setting.env
services/technical-indicator/: Dockerfile  Makefile  candle_fun.py  config.py  historical.setting.env  live.setting.env  naive Dockerfile  pyproject.toml  run.py
services/trade/: Makefile  README.md  config.py  historical.setting.env  live.setting.env  pyproject.toml  run.py  setting.env
services/trade/kraken_api/: base.py  moke.py  rest.py  trade.py  websocket.py
